--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
+    "@types/nunjucks": "^3.2.6",
     "@types/prompts": "^2.4.9",
     "chalk": "^5.3.0",
-    "ejs": "^3.1.9",
     "esbuild": "^0.18.20",
     "gradient-string": "^2.0.2",
+    "nunjucks": "^3.2.4",
     "prettier": "^3.2.5",
     "prompts": "^2.4.2",
     "zx": "^7.2.3"
