--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "scripts": {
     "format": "prettier --write .",
     "build": "zx ./scripts/build.mjs",
-    "snapshot": "pnpm build && zx ./scripts/snapshot.mjs",
-    "test": "pnpm snapshot --test"
+    "projects:build": "pnpm build && zx ./scripts/projects.mjs",
+    "projects:test": "pnpm projects:build --test"
   },
   "repository": {
     "type": "git",
