--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "node": ">=v18.0.0"
   },
   "scripts": {
+    "build": "./scripts/build.mjs",
     "format": "prettier --write .",
-    "build": "zx ./scripts/build.mjs",
-    "snapshot": "pnpm build && zx ./scripts/snapshot.mjs",
+    "prepublishOnly": "./scripts/prepublish.mjs",
+    "snapshot": "pnpm build && ./scripts/snapshot.mjs",
     "test": "pnpm snapshot --test"
   },
   "repository": {
