--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "homepage": "https://github.com/solana-program/create-solana-program#readme",
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.1",
     "@tsconfig/node20": "^20.1.2",
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
