--- a/.prettierrc
+++ b/.prettierrc
@@ -5,13 +5,5 @@
   "useTabs": false,
   "tabWidth": 2,
   "arrowParens": "always",
-  "printWidth": 80,
-  "overrides": [
-    {
-      "files": ["*.mts", "*.cts", "*.ts"],
-      "options": {
-        "parser": "typescript"
-      }
-    }
-  ]
+  "printWidth": 80
 }
