--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        solana: ["1.17.24", "1.18.4"]
+        solana: ["1.18.4"]
+        # solana: ["1.17.24", "1.18.4"]
 
     steps:
       - name: Git checkout
