Pre-scaffold projects in CI for caching purposes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,12 @@ jobs:
         with:
           node-version: 18
           cache: "pnpm"
+      - name: Install Solana
+        uses: metaplex-foundation/actions/install-solana@v1
+        with:
+          version: ${{ matrix.solana }}
+      - name: Pre-scaffold projects for caching purposes
+        run: pnpm snapshot --scaffold-only
       - name: Cache cargo crates
         uses: actions/cache@v4
         with:
@@ -54,10 +60,6 @@ jobs:
           key: ${{ runner.os }}-solana@${{ matrix.solana }}-${{ hashFiles('./projects/**/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-solana@${{ matrix.solana }}
-      - name: Install Solana
-        uses: metaplex-foundation/actions/install-solana@v1
-        with:
-          version: ${{ matrix.solana }}
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Build and run tests
