Fix scripts permission denied errors

--- a/template/clients/base/package.json
+++ b/template/clients/base/package.json
@@ -1,9 +1,9 @@
 {
   "scripts": {
     "generate": "pnpm generate:idls && pnpm generate:clients",
-    "generate:clients": "./scripts/generate-clients.mjs",
-    "validator": "./scripts/start-validator.mjs",
-    "validator:stop": "./scripts/stop-validator.mjs"
+    "generate:clients": "zx ./scripts/generate-clients.mjs",
+    "validator": "zx ./scripts/start-validator.mjs",
+    "validator:stop": "zx ./scripts/stop-validator.mjs"
   },
   "devDependencies": {
     "@metaplex-foundation/kinobi": "^0.17.4"
