--- a/template/clients/rust/package.json
+++ b/template/clients/rust/package.json
@@ -1,5 +1,5 @@
 {
   "scripts": {
-    "clients:rust:test": "./scripts/client/test-rust.mjs"
+    "clients:rust:test": "zx ./scripts/client/test-rust.mjs"
   }
 }
