--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,5 +118,5 @@ jobs:
         with:
           publish: ./node_modules/.bin/changeset publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
