--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,6 @@ jobs:
   tests:
     name: Test
     runs-on: ubuntu-latest
-    if: false
     strategy:
       matrix:
         solana: ["1.17.24", "1.18.4"]
@@ -75,7 +74,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
-    needs: [lint]
+    needs: [lint, tests]
     outputs:
       published: ${{ steps.changesets.outputs.published }}
     steps:
@@ -114,8 +113,8 @@ jobs:
             ${{ runner.os }}-crates-solana-v${{ env.SOLANA_VERSION }}
       - name: Setup git user
         run: |
-          git config --global user.email "github@solana.com"
-          git config --global user.name "solana-bot"
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "github-actions[bot]"
       - name: Create Release Pull Request or Publish
         id: changesets
         uses: changesets/action@v1
