--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,12 +113,14 @@ jobs:
             ${{ runner.os }}-crates-solana-v${{ env.SOLANA_VERSION }}
       - name: Setup git user
         run: |
-          git config --global user.email "github-actions@github.com"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
       - name: Create Release Pull Request or Publish
         id: changesets
         uses: changesets/action@v1
         with:
+          commit: "Publish a new release"
+          title: "Publish a new release"
           publish: ./node_modules/.bin/changeset publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
