Rename validator scripts

--- a/template/clients/base/package.json
+++ b/template/clients/base/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "generate": "pnpm generate:idls && pnpm generate:clients",
     "generate:clients": "zx ./scripts/generate-clients.mjs",
-    "validator": "zx ./scripts/start-validator.mjs",
+    "validator:start": "zx ./scripts/start-validator.mjs",
+    "validator:restart": "pnpm validator:start --restart",
     "validator:stop": "zx ./scripts/stop-validator.mjs"
   },
   "devDependencies": {
