--- a/template/clients/base/package.json
+++ b/template/clients/base/package.json
@@ -7,6 +7,7 @@
     "validator:stop": "zx ./scripts/stop-validator.mjs"
   },
   "devDependencies": {
-    "@metaplex-foundation/kinobi": "^0.19.0"
+    "kinobi": "^0.20.1",
+    "@kinobi-so/nodes-from-anchor": "^0.20.1"
   }
 }
