--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           version: ${{ matrix.anchor }}
       - name: Pre-scaffold projects for caching purposes
-        run: pnpm snapshot --scaffold-only
+        run: pnpm snapshot ${{ matrix.project }} --scaffold-only
       - name: Cache cargo crates
         uses: actions/cache@v4
         with:
@@ -77,7 +77,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-crates-solana-v${{ matrix.solana }}
       - name: Build and run tests
-        run: pn snapshot ${{ matrix.project }} --test
+        run: pnpm snapshot ${{ matrix.project }} --test
 
   release:
     name: Release
