--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,8 @@ jobs:
         project: ["counter-anchor", "counter-shank"]
         solana: ["1.17.24", "1.18.12"]
         include:
+          - anchor: "0.29.0"
+            project: "counter-anchor"
           - anchor: "0.30.0"
             project: "counter-anchor"
     steps:
