--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        project: ["counter-anchor", "counter-shank"]
         solana: ["1.17.24", "1.18.12"]
+        include:
+          - anchor: "0.30.0"
+            project: "counter-anchor"
     steps:
       - name: Git checkout
         uses: actions/checkout@v4
@@ -52,8 +56,13 @@ jobs:
         uses: metaplex-foundation/actions/install-solana@v1
         with:
           version: ${{ matrix.solana }}
+      - name: Install Anchor
+        if: ${{ matrix.anchor }}
+        uses: metaplex-foundation/actions/install-anchor-cli@v1
+        with:
+          version: ${{ matrix.anchor }}
       - name: Pre-scaffold projects for caching purposes
-        run: pnpm snapshot --scaffold-only
+        run: pnpm snapshot ${{ matrix.project }} --scaffold-only
       - name: Cache cargo crates
         uses: actions/cache@v4
         with:
@@ -68,7 +77,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-crates-solana-v${{ matrix.solana }}
       - name: Build and run tests
-        run: pnpm test
+        run: pnpm snapshot ${{ matrix.project }} --test
 
   release:
     name: Release
