--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
     branches: [main]
 
 env:
+  ANCHOR_VERSION: 0.30.0
   SOLANA_VERSION: 1.18.12
 
 jobs:
@@ -109,6 +110,10 @@ jobs:
         uses: metaplex-foundation/actions/install-solana@v1
         with:
           version: ${{ env.SOLANA_VERSION }}
+      - name: Install Anchor
+        uses: metaplex-foundation/actions/install-anchor-cli@v1
+        with:
+          version: ${{ env.ANCHOR_VERSION }}
       - name: Pre-scaffold projects for caching purposes
         run: pnpm snapshot --scaffold-only
       - name: Cache cargo crates
