--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,8 @@ on:
 
 env:
   ANCHOR_VERSION: 0.30.0
-  SOLANA_VERSION: 1.18.12
+  SOLANA_VERSION: 1.18.18
+  TOOLCHAIN: 1.75.0
 
 jobs:
   lint:
@@ -35,14 +36,14 @@ jobs:
     strategy:
       matrix:
         project: ["counter-anchor", "counter-shank"]
-        solana: ["1.17.24", "1.18.12"]
+        solana: ["1.17.34", "1.18.18"]
         include:
           - anchor: "0.30.0"
             project: "counter-anchor"
-            solana: "1.18.12"
+            solana: "1.18.18"
           - anchor: "0.29.0"
             project: "counter-anchor"
-            solana: "1.17.24"
+            solana: "1.17.34"
     steps:
       - name: Git checkout
         uses: actions/checkout@v4
@@ -61,6 +62,16 @@ jobs:
         uses: metaplex-foundation/actions/install-solana@v1
         with:
           version: ${{ matrix.solana }}
+      - name: Install Rustfmt
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ env.TOOLCHAIN }}
+          components: rustfmt
+      - name: Install Clippy
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ env.TOOLCHAIN }}
+          components: clippy
       - name: Install Anchor
         if: ${{ matrix.anchor }}
         uses: metaplex-foundation/actions/install-anchor-cli@v1
