Add script and CI for publishing JS clients

--- a/template/clients/js/package.json
+++ b/template/clients/js/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "clients:js:format": "zx ./scripts/client/format-js.mjs",
     "clients:js:lint": "zx ./scripts/client/lint-js.mjs",
+    "clients:js:publish": "zx ./scripts/client/publish-js.mjs",
     "clients:js:test": "zx ./scripts/client/test-js.mjs"
   },
   "devDependencies": {
