--- a/template/clients/rust/package.json
+++ b/template/clients/rust/package.json
@@ -6,6 +6,6 @@
     "clients:rust:test": "zx ./scripts/client/test-rust.mjs"
   },
   "devDependencies": {
-    "@kinobi-so/renderers-rust": "^0.21.7"
+    "@codama/renderers-rust": "^1.0.0"
   }
 }
