--- a/template/base/package.json
+++ b/template/base/package.json
@@ -16,5 +16,8 @@
     "typescript": "^5.5.2",
     "zx": "^7.2.3"
   },
+  "engines": {
+    "node": ">=v20.0.0"
+  },
   "packageManager": "pnpm@9.1.0"
 }
